stockworld-frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockworld-frontend
  labels:
    app-type: frontend
    app-name: stockworld-frontend
spec:
  replicas: 1  # Number of replicas (pods) to run
  selector:
    matchLabels:
      app-type: frontend
      app-name: stockworld-frontend
  template:
    metadata:
      namespace: stockworld
      labels:
        app-type: frontend
        app-name: stockworld-frontend
    spec:
      imagePullSecrets:
      - name: stockworld-registry
      containers:
        - name: stockworld-frontend
          image: registry.digitalocean.com/stockworld-registry/stockworld-frontend:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.5"     # Maximum CPU usage (0.5 cores)
              memory: "512Mi"  # Maximum memory usage (512 Megabytes)
            requests:
              cpu: "0.2"     # Minimum CPU required (0.2 cores)
              memory: "256Mi"  # Minimum memory required (256 Megabytes)
