stockworld-frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stockworld-frontend
  namespace: stockworld
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dev.stockiworld.com
    secretName: frontend-certificate-secret

  rules:
  - host: "dev.stockiworld.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: stockworld-frontend
            port:
              number: 80
